--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://fonts.googleapis.com/css?family=Assistant:800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Assistant:800|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/tomorrow-night.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
