--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link href="https://fonts.googleapis.com/css?family=Assistant:800|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/tomorrow-night.css" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -26,5 +26,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="./carrotsearch.circles.js" async></script>
   </body>
 </html>
