--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="%PUBLIC_URL%/carrotsearch.circles.js" async></script>
     <link href="https://fonts.googleapis.com/css?family=Assistant:800|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/tomorrow-night.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,6 +27,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="./carrotsearch.circles.js" async></script>
   </body>
 </html>
