--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Justin Le Tourneau, Developer Home Site"
     />
     <script src="%PUBLIC_URL%/carrotsearch.circles.js" async></script>
     <link href="https://fonts.googleapis.com/css?family=Assistant:800|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/tomorrow-night.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Justin Le Tourneau Dev Site</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
